2007-12-07  Sven Neumann  <sven@gimp.org>

	* libgimpcolor/test-color-parser.c: removed unused import.

2007-12-07  Michael Natterer  <mitch@gimp.org>

	* app/display/gimpdisplayshell-callbacks.c
	(gimp_display_shell_tool_events): if a device change happens, make
	sure we update the new active tool's focus display and modifier
	state. Fixes most of bug #493176.

2007-12-07  Michael Natterer  <mitch@gimp.org>

	* app/gimp-log.[ch]: renamed log domain TOOLS to TOOL_EVENTS and
	added domain TOOL_FOCUS.

	* app/display/gimpdisplayshell-callbacks.c: s/TOOLS/TOOL_EVENTS/

	* app/tools/gimptool.c: port focus debug output to GIMP_LOG().

2007-12-07  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpselection.[ch]: added GErrors to
	gimp_selection_extract() and gimp_selection_float().

	* app/core/gimp-edit.c
	* app/tools/gimpeditselectiontool.c
	* app/actions/select-commands.c: handle the returned error.

	* app/core/gimpdrawable-transform.c: pass NULL errors since this
	file knows what it does and won't get errors.

	* tools/pdbgen/pdb/selection.pdb: pass the error.

	* app/pdb/selection_cmds.c: regenerated.

2007-12-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/gimpui.py (ColorSelector.__init__): accept a
	string and parse it using gimpcolor.rgb_parse_css().

	* plug-ins/pygimp/plug-ins/sphere.py: show off the new feature.

2007-12-07  Sven Neumann  <sven@gimp.org>

	* plug-ins/pygimp/plug-ins/foggify.py: push/pop a context instead
	of manually restoring the background color.

2007-12-07  Sven Neumann  <sven@gimp.org>

	* app/batch.c (batch_run): only show the message about using the
	default batch interpreter when running in verbose mode.

2007-12-06  Martin Nordholts  <martinn@svn.gnome.org>

	* app/tools/gimprectangletool.c
	(gimp_rectangle_tool_set_property): Also update the integer
	representation of the rect when the GObject properties has been
	set.

2007-12-06  Michael Natterer  <mitch@gimp.org>

	* app/core/gimpimage-merge.[ch]